# jeff-dean-bot

./: .gitignore  DOCKERFILE  Procfile  app.py  bot.py  facts.txt  jeffDeanBot.py  main.py  pyproject.toml  requirements.txt  setup.sh  util.py
telepot/examples/: emodi.py  emodia.py
