[tool.poetry]
name = "jeff-dean-bot"
version = "0.1.0"
description = ""
authors = ["Joscha Götzer <joscha.goetzer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.3"
logzero = "^1.5.0"
python-telegram-bot = "^12.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
